<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_color"
    tools:context=".ui.home.link.LinkFragment">

    <TextView
        android:id="@+id/dashboard_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/bold_font"
        android:text="@string/dashboard"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/dashboard_iv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/dashboard_bg"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/dashboard_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/dashboard_tv">

        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/wrench" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/top_curve_ractangular_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dashboard_iv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="200dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/error_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:fontFamily="@font/medium_font"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/success_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/gm_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/regular_font"
                    android:text="Good morning"
                    android:textColor="@color/gray_999CA0"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:fontFamily="@font/bold_font"
                    android:text="Amrit Chaturvedi  👋"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gm_tv" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/top_story_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/name_tv" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/view_analytics_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="15dp"
                    android:background="@drawable/button_bg"
                    android:paddingVertical="8dp"
                    app:layout_constraintTop_toBottomOf="@id/top_story_rv">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <View
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/ic_price_boost" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:fontFamily="@font/medium_font"
                            android:text="@string/view_analytics"
                            android:textColor="@color/black"
                            android:textSize="13sp" />

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.itarm.openinappdemo.ui.home.TabView
                    android:id="@+id/tab_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/view_analytics_btn" />

                <com.itarm.openinappdemo.utils.NonSwappableViewPager
                    android:id="@+id/link_tab"
                    android:layout_width="match_parent"
                    android:layout_height="700dp"
                    android:minHeight="600dp"
                    app:layout_constraintTop_toBottomOf="@+id/tab_view" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/view_link_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="15dp"
                    android:background="@drawable/button_bg"
                    android:paddingVertical="8dp"
                    app:layout_constraintTop_toBottomOf="@id/link_tab">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <View
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/ic_price_boost" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:fontFamily="@font/medium_font"
                            android:text="@string/view_all_links"
                            android:textColor="@color/black"
                            android:textSize="13sp" />

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/whatsApp_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="15dp"
                    android:background="@drawable/whats_app_bg"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    app:layout_constraintTop_toBottomOf="@id/view_link_ll">

                    <View
                        android:id="@+id/whatsApp_view"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/ic_whats_app"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/medium_font"
                        android:text="@string/talk_with_us"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="@id/whatsApp_view"
                        app:layout_constraintStart_toEndOf="@id/whatsApp_view"
                        app:layout_constraintTop_toTopOf="@id/whatsApp_view" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/faq_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="15dp"
                    android:background="@drawable/frequtaly_ask_question_botton_bg"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    app:layout_constraintTop_toBottomOf="@id/whatsApp_ll">

                    <View
                        android:id="@+id/faq_view"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/ic_question_mark"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/medium_font"
                        android:text="@string/frequently_ask_questions"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="@id/faq_view"
                        app:layout_constraintStart_toEndOf="@id/faq_view"
                        app:layout_constraintTop_toTopOf="@id/faq_view" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:layout_constraintTop_toBottomOf="@id/faq_ll"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>